infrastructures/ingress/multi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - image-converter.yubinshin.com
        - api.image-converter.yubinshin.com
        - authentication.image-converter.yubinshin.com
      secretName: image-converter-tls
  rules:
    - host: image-converter.yubinshin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port: { number: 80 }
    - host: api.image-converter.yubinshin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port: { number: 80 }
    - host: authentication.image-converter.yubinshin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port: { number: 80 }
